cmake_minimum_required(VERSION 3.10)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode main.cpp "526. Beautiful Arrangement.h" "1476. Subrectangle Queries.h" "1689. Partitioning Into Minimum Number Of Deci-Binary Numbers.h" "46. Permutations.h" "21. Merge Two Sorted Lists.h" "980. Unique Paths III.h" "1402. Reducing Dishes.h" "44. Wildcard Matching.h" "42. Trapping Rain Water.h")